--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,13 +21,15 @@
             android:name=".SignUp2">
 
         </activity>
-        <activity android:name=".LogIn"></activity>
-        <activity android:name=".SignUp">
+        <activity android:name=".LogIn">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".SignUp">
+
         </activity>
     </application>
 
