Se creó la instancia para cargar la foto de perfil, el nombre y el email en el DrawerHeader

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,7 @@
         android:theme="@style/Theme.IGuauNoActionBar">
         <activity
             android:name=".NavigationDrawer">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
@@ -28,7 +24,13 @@
         <activity android:name=".LogIn">
 
         </activity>
-        <activity android:name=".SignUp"></activity>
+        <activity android:name=".SignUp">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
